# boxed

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum
agent/: Cargo.toml
agent/src/: executor.rs  fs_watcher.rs  main.rs  rpc.rs
api/: openapi.yaml
cmd/boxed/: main.go
cmd/boxed-server/: main.go
docs/: api.md
internal/api/: handler.go
internal/cli/: files.go  list.go  repl.go  root.go  run.go  serve.go
internal/driver/: driver.go
internal/driver/docker/: docker.go  files.go
internal/proto/: rpc.go
sdk/python/: README.md  pyproject.toml
sdk/python/boxed_sdk/: __init__.py
sdk/python/tests/: integration_test.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: boxed.ts  index.ts
sdk/typescript/test/: integration.ts
tests/integration/: filesystem_test.go  lifecycle_test.go  main_test.go  repl_test.go
